Read uncomplete WM_CLASS string

While X.org spec tells that WM_CLASS must contain two
null-terminated strings (the instance and the class),
some thrid party applications may not fully comply with this.

In that case, use the single string provided for both fields:
`resourceName` and `resourceClass`, instead of leaving them empty.
Those fields having the same string is fairly common also on
well-behaved apps.

BUG: 441005